[package]
default-run = "memory-db"
name = "memory-db"
version = "0.1.0"
edition = "2021"

[[bench]]
harness = false
name = "test2"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.39"
criterion = { version = "0.5.1", features = ["async"] }
dashmap = "6.1.0"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
