[package]
default-run = "memory-db"
name = "memory-db"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.39"
criterion = { version = "0.5.1", features = ["async"] }
dashmap = "6.1.0"
raft = "0.7.0"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.1"
tokio = { version = "1.42.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-slog = "0.3.0"
tracing-subscriber = "0.3.19"
